--- a/res/layout/configure.xml
+++ b/res/layout/configure.xml
@@ -9,7 +9,8 @@
                   android:orientation="vertical"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
-                  android:background="#999">
+                  android:background="#999"
+                  android:baselineAligned="false">
               
         <LinearLayout android:id="@+id/main.topLayout" 
                       android:layout_height="wrap_content" 
@@ -25,11 +26,13 @@
             </TextView>
         </LinearLayout>
 
-        <RelativeLayout android:id="@+id/buttonsParent"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:background="@color/listBackground">
-        </RelativeLayout>
+        <LinearLayout android:id="@+id/buttonsParent"
+                      android:orientation="vertical"
+                      android:layout_width="fill_parent"
+                      android:layout_height="0dip"
+                      android:layout_weight="1"
+                      android:background="@color/listBackground">
+        </LinearLayout>
         
     </LinearLayout>
 
