--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -54,7 +54,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"                    
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </Button>
 
                 <ToggleButton android:text="Button" 
@@ -62,7 +63,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"                    
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </ToggleButton>
         
                 <Button android:text="Button" 
@@ -70,7 +72,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </Button>
 
                 <ToggleButton android:text="Button" 
@@ -78,7 +81,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"                    
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </ToggleButton>
 
        </LinearLayout>
@@ -89,14 +93,16 @@
                       android:layout_height="100dp"
                       android:layout_marginTop="20dp"
                       android:layout_marginLeft="20dp"
-                      android:layout_marginRight="20dp">
+                      android:layout_marginRight="20dp"
+                      android:textStyle="bold">
     
                 <Button android:text="Button" 
                         android:id="@+id/main.button3"  
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </Button>
 
                 <ToggleButton android:text="Button" 
@@ -104,7 +110,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"                    
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </ToggleButton>
         
                 <Button android:text="Button" 
@@ -112,7 +119,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </Button>
                 
                 <ToggleButton android:text="Button" 
@@ -120,7 +128,8 @@
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"                    
                         android:layout_gravity="center"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:textStyle="bold">
                 </ToggleButton>
                 
        </LinearLayout>
