--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="id" name="buttonType" />
+    <item type="id" name="linkedButton" />
+    <item type="id" name="buttonId" />
 </resources>
