--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout android:id="@+id/deviceListLayout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent" 
-                android:layout_height="fill_parent"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+                android:layout_height="fill_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout android:id="@+id/topLayout"
                   android:orientation="vertical"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
-                  android:background="@color/listBackground">
+                  android:background="#999"
+                  android:baselineAligned="false">
               
         <LinearLayout android:id="@+id/main.topLayout" 
                       android:layout_height="wrap_content" 
                       android:layout_width="fill_parent" 
-                      android:background="#999">
+                      android:background="#999"
+                      android:orientation="horizontal">
             <TextView android:layout_height="wrap_content" 
                       android:layout_width="wrap_content" 
-                      android:text="@string/app_name" 
+                      android:text="@string/title.main" 
                       android:id="@+id/daisyLabel" 
                       android:textColor="#FFF" 
                       android:textStyle="bold" 
@@ -27,10 +28,10 @@
                       android:text="" 
                       android:gravity="right" 
                       android:layout_gravity="right" 
-                      android:layout_width="0dip" 
-                      android:layout_weight="1" 
+                      android:layout_width="0dip"
+                      android:layout_weight="1"  
                       android:padding="4dp" 
-                      android:textColor="#FFF" 
+                      android:textColor="#FFF"                      
                       android:id="@+id/main.connectionStatus">
             </TextView>
             <ProgressBar style="@android:style/Widget.ProgressBar.Small" 
@@ -41,122 +42,13 @@
                          android:padding="4dp">
             </ProgressBar>
         </LinearLayout>
-    
-        <LinearLayout android:orientation="horizontal"
+
+        <LinearLayout android:id="@+id/buttonsParent"
+                      android:orientation="vertical"
                       android:layout_width="fill_parent"
-                      android:layout_height="100dp"
-                      android:layout_marginTop="20dp"
-                      android:layout_marginLeft="20dp"
-                      android:layout_marginRight="20dp">
-    
-                <Button android:text="Button" 
-                        android:id="@+id/main.button1"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"                    
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </Button>
-
-                <ToggleButton android:text="Button" 
-                        android:id="@+id/main.toggleButton1"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"                    
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </ToggleButton>
-        
-                <Button android:text="Button" 
-                        android:id="@+id/main.button2" 
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </Button>
-
-                <ToggleButton android:text="Button" 
-                        android:id="@+id/main.toggleButton2"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"                    
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </ToggleButton>
-
-       </LinearLayout>
-    
-    
-        <LinearLayout android:orientation="horizontal"
-                      android:layout_width="fill_parent"
-                      android:layout_height="100dp"
-                      android:layout_marginTop="20dp"
-                      android:layout_marginLeft="20dp"
-                      android:layout_marginRight="20dp"
-                      android:textStyle="bold">
-    
-                <Button android:text="Button" 
-                        android:id="@+id/main.button3"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </Button>
-
-                <ToggleButton android:text="Button" 
-                        android:id="@+id/main.toggleButton3"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"                    
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </ToggleButton>
-        
-                <Button android:text="Button" 
-                        android:id="@+id/main.button4" 
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </Button>
-                
-                <ToggleButton android:text="Button" 
-                        android:id="@+id/main.toggleButton4"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"                    
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:textStyle="bold">
-                </ToggleButton>
-                
-       </LinearLayout>
-    
-        <LinearLayout android:orientation="horizontal"
-                      android:layout_width="fill_parent"
-                      android:layout_height="100dp"
-                      android:layout_marginTop="20dp"
-                      android:layout_marginLeft="20dp"
-                      android:layout_marginRight="20dp">
-    
-                <Button android:text="Button" 
-                        android:id="@+id/main.button5"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1">
-                </Button>
-
-                <ToggleButton android:text="Button" 
-                        android:id="@+id/main.toggleButton5"  
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"                    
-                        android:layout_gravity="center"
-                        android:layout_weight="1">
-                </ToggleButton>
-        
+                      android:layout_height="0dip"
+                      android:layout_weight="1"
+                      android:background="@color/listBackground">
         </LinearLayout>
     </LinearLayout>
 
