--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -62,6 +62,8 @@
                 android:layout_width="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="6dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
                 android:textStyle="bold" 
                 android:id="@+id/configureButton"
                 android:text="@string/button.configure">
