--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,15 +2,7 @@
 
 <resources>       
     
-    <string-array name="prefs_button_count_entries">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-    </string-array>
-
-    <string-array name="prefs_pin_entries">
+    <string-array name="bt_pin_entries">
         <item>Pin 1 (PIO 03)</item>
         <item>Pin 2 (PIO 06)</item>
         <item>Pin 3 (PIO 07)</item>
@@ -18,7 +10,7 @@
         <item>Pin 5 (PIO 11)</item>
     </string-array>
 
-    <string-array name="prefs_pin_entry_values">
+    <string-array name="bt_pin_entry_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
@@ -26,13 +18,23 @@
         <item>4</item>
     </string-array>
 
-    <string-array name="prefs_button_type_entries">
+    <string-array name="wifi_pin_entries">
+        <item>Pin 1 (GPIO 02)</item>
+        <item>Pin 2 (GPIO 03)</item>
+    </string-array>
+
+    <string-array name="wifi_pin_entry_values">
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+    
+    <string-array name="button_type_entries">
         <item>On/Off</item>
         <item>One Second Pulse</item>
         <item>Hold to Pulse</item>
     </string-array>
 
-    <string-array name="prefs_button_type_entry_values">
+    <string-array name="button_type_entry_values">
         <item>ON_OFF</item>
         <item>PULSE</item>
         <item>HOLD_PULSE</item>
